# dowsing

./: .gitignore  Cargo.toml  README.md  SECURITY_REVIEW.md  claude.md  cleanup.sh  glimpse_optimizations.md
src/: browser.rs  embedder.rs  extractor.rs  main.rs  navigator.rs
